...
            longitude = 103.0f,
            flagEmoji = "🇨🇳",
        ),
        GeographyCountry(
            id = "japan",
            cca2 = "JP",
            chineseShortName = "日本",
            chineseFullName = "日本国",
            englishName = "Japan",
            localName = "日本",
            population = "约 1.24 亿",
            area = "约 37.8 万平方公里",
            currency = "日元 JPY",
            capital = "东京",
...
